fix(traffic): remove double border

--- a/src/app/pages/dashboard/electricity/electricity.component.scss
+++ b/src/app/pages/dashboard/electricity/electricity.component.scss
@@ -30,6 +30,9 @@
     align-items: center;
     padding-top: nb-theme(card-header-with-select-padding-top);
     padding-bottom: nb-theme(card-header-with-select-padding-bottom);
+
+    // prevents double border from chart yAxisSplitLine
+    margin-bottom: -1px;
   }
 
   .type-select {
